fix codacy error
